# todos-api

./: Cargo.toml  README.md
src/: main.rs
src/application/usecases/: authentication.rs  todos.rs  users.rs
src/domain/entities/: todos.rs  users.rs
src/domain/repositories/: todos.rs  users.rs
src/domain/value_objects/: todos.rs  users.rs
src/infrastructure/: mod.rs
src/infrastructure/app_state/repositories/: todos.rs  users.rs
src/infrastructure/axum_http/: default_routers.rs  http_serve.rs  middleware.rs  mod.rs
src/infrastructure/axum_http/routers/: authentication.rs  mod.rs  todos.rs  users.rs
src/infrastructure/jwt_authentication/: authentication_model.rs  jwt_model.rs  mod.rs
